--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <input type="number" id="winN" value="8" min="3" max="30" />
             </div>
             <div class="group">
-              <label>เกณฑ์ p̂ (≥)</label>
+              <label>เกณฑ์ \u005chat p (≥)</label>
               <input type="number" id="thr" value="0.52" min="0.50" max="0.65" step="0.01" />
             </div>
             <div class="group">
@@ -257,11 +257,11 @@
               <div class="v" id="winCount" style="margin-top:6px">0</div>
             </div>
             <div class="group">
-              <label>p̂_B</label>
+              <label>\u005chat p_B</label>
               <div class="v" id="pHatB" style="margin-top:6px">–</div>
             </div>
             <div class="group">
-              <label>p̂_P</label>
+              <label>\u005chat p_P</label>
               <div class="v" id="pHatP" style="margin-top:6px">–</div>
             </div>
             <div class="group">
@@ -475,14 +475,6 @@
     el.h4Num.textContent = vals[3]; el.h5Num.textContent = vals[4]; el.failNum.textContent = vals[5];
   }
 
-  /* ---------- UI metrics updater (เพิ่มใหม่) ---------- */
-  function updateMetricsUI({pB, pP, Np, altL}){
-    if (el.pHatB) el.pHatB.textContent = isFinite(pB) ? pB.toFixed(3) : '–';
-    if (el.pHatP) el.pHatP.textContent = isFinite(pP) ? pP.toFixed(3) : '–';
-    if (el.winCount) el.winCount.textContent = String(Np||0);
-    if (el.altLen) el.altLen.textContent = String(altL||0);
-  }
-
   /* ---------- Decision + Cycle ---------- */
   function decide(){
     const N = clamp(el.winN.value,3,50);
@@ -498,19 +490,20 @@
     if(state.cycle.pauseRemain>0){
       setHUD('SKIP',`พักหลัง HIT • เหลือ ${state.cycle.pauseRemain} ไม้`);
       setCycle('PAUSE',`พัก ${state.cycle.pauseRemain} ไม้`,state.cycle.lastSuggested);
-      renderCycleSummary();
-      /* อัปเดตตัวเลขบน UI ด้วย */
-      updateMetricsUI({pB:NaN,pP:NaN,Np:bpOnly(state.seq).length,altL:alternationLen(state.seq)});
-      return;
+      renderCycleSummary(); return;
     }
 
     const seq=state.seq; const last=seq[seq.length-1];
+    if(el.skipAfterTie.checked && last==='T'){
+      setHUD('SKIP','เพิ่งออก Tie ➜ ข้าม 1 ไม้');
+      setCycle(state.cycle.active?'ACTIVE':'IDLE', state.cycle.active?`Try ${state.cycle.tries+1}/${state.cycle.max}`:'รอสแกน', state.cycle.lastSuggested);
+      renderCycleSummary(); return;
+    }
+
     const altL = alternationLen(seq);
     const antiPingActive = altL >= antiPingLen;
-
     const r = useEMA ? laplaceFromEMA(seq,alpha) : laplaceFromWindow(lastWindowBP(seq,N));
     const {pB,pP,Np} = r;
-    updateMetricsUI({pB,pP,Np,altL}); // ← อัปเดตหน้าจอทุกครั้งที่คำนวณ
 
     if(Np===0){
       setHUD('SKIP','ยังไม่มีข้อมูล B/P เพียงพอ');
@@ -525,10 +518,10 @@
 
     const passB = pB>=thr, passP = pP>=thr;
     let suggested=null, txt='';
-    if(mode==='BONLY'){ if(passB){ suggested='B'; txt=`p̂_B = ${pB.toFixed(3)} ≥ ${thr.toFixed(2)} ➜ แทง B`; } }
+    if(mode==='BONLY'){ if(passB){ suggested='B'; txt=`\u005chat p_B = ${pB.toFixed(3)} ≥ ${thr.toFixed(2)} ➜ แทง B`; } }
     else{
-      if(passB && (!passP || pB>=pP)){ suggested='B'; txt=`p̂_B = ${pB.toFixed(3)} ≥ ${thr.toFixed(2)} ➜ แทง B`; }
-      else if(passP && (!passB || pP>pB)){ suggested='P'; txt=`p̂_P = ${pP.toFixed(3)} ≥ ${thr.toFixed(2)} ➜ แทง P`; }
+      if(passB && (!passP || pB>=pP)){ suggested='B'; txt=`\u005chat p_B = ${pB.toFixed(3)} ≥ ${thr.toFixed(2)} ➜ แทง B`; }
+      else if(passP && (!passB || pP>pB)){ suggested='P'; txt=`\u005chat p_P = ${pP.toFixed(3)} ≥ ${thr.toFixed(2)} ➜ แทง P`; }
     }
 
     if(suggested){
@@ -537,7 +530,7 @@
       if(!state.cycle.active){ state.cycle.active=true; state.cycle.tries=0; }
       setCycle('ACTIVE',`Try ${state.cycle.tries+1}/${state.cycle.max}`,state.cycle.lastSuggested);
     }else{
-      setHUD('SKIP',`p̂_B=${pB.toFixed(3)}, p̂_P=${pP.toFixed(3)} (thr=${thr.toFixed(2)})`);
+      setHUD('SKIP',`\u005chat p_B=${pB.toFixed(3)}, p_P=${pP.toFixed(3)} (thr=${thr.toFixed(2)})`);
       setCycle(state.cycle.active?'ACTIVE':'IDLE', state.cycle.active?`Try ${state.cycle.tries+1}/${state.cycle.max}`:'รอสแกน', state.cycle.lastSuggested);
     }
     renderCycleSummary();
@@ -594,23 +587,8 @@
   el.btnReset.onclick=()=>{ if(confirm('ล้างข้อมูลทั้งหมดและรีเซ็ตสถานะใช่ไหม?')){ state.seq=[]; state.cycle=resetCycle(); resetCycleStats(); renderTimeline(); statsAll(); decide(); clearStore(); } };
 
   // Header mirrors (ถูกซ่อน แต่ยังคงทำงานได้ถ้าเปิด CSS กลับ)
-  if (el.tbB) el.tbB.onclick=()=>el.btnB.click();
-  if (el.tbP) el.tbP.onclick=()=>el.btnP.click();
-  if (el.tbT) el.tbT.onclick=()=>el.btnT.click();
-  if (el.tbU) el.tbU.onclick=()=>el.btnUndo.click();
-  if (el.tbR) el.tbR.onclick=()=>el.btnReset.click();
-
-  // คีย์ลัด B / P / T / U / R (ยกเว้นตอนโฟกัสอยู่ใน input/select/textarea)
-  document.addEventListener('keydown', (e)=>{
-    const tag = (document.activeElement && document.activeElement.tagName) || '';
-    if (['INPUT','SELECT','TEXTAREA'].includes(tag)) return;
-    const k = e.key.toLowerCase();
-    if (k==='b') { el.btnB.click(); }
-    else if (k==='p') { el.btnP.click(); }
-    else if (k==='t') { el.btnT.click(); }
-    else if (k==='u') { el.btnUndo.click(); }
-    else if (k==='r') { el.btnReset.click(); }
-  });
+  $('tbB').onclick=()=>el.btnB.click(); $('tbP').onclick=()=>el.btnP.click(); $('tbT').onclick=()=>el.btnT.click();
+  $('tbU').onclick=()=>el.btnUndo.click(); $('tbR').onclick=()=>el.btnReset.click();
 
   ['entryMode','winN','thr','antiPing','skipAfterTie','useEMA','emaAlpha','cycleMax','tieNoCount']
     .forEach(id=>{
